--- a/Angular_VCProject/src/app/admin-side/mission/add-mission/add-mission.component.html
+++ b/Angular_VCProject/src/app/admin-side/mission/add-mission/add-mission.component.html
@@ -32,6 +32,25 @@
                     </div>
                   </div>
                   
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <label class="col-form-label">Mission Title</label>
+                      <input type="text" class="form-control" formControlName="missionTitle" placeholder="Enter mission title">
+                      <span class="text-danger" *ngIf="missionTitle.invalid && (missionTitle.touched || formValid)">
+                        Please Enter Mission Title
+                      </span>
+                    </div>
+                    <div class="col-sm-6">
+                      <label class="col-form-label">Mission Theme</label>
+                      <select class="form-select" formControlName="missionThemeId">
+                        <option *ngFor="let item of missionThemeList" value="{{item.value}}">{{item.text}}</option>
+                      </select>
+                      <span class="text-danger" *ngIf="missionThemeId.invalid && (missionThemeId.touched || formValid)">
+                        Please Select Mission Theme
+                      </span>
+                      </div>
+                  </div>
+
                    <div class="row">
                     <div class="col-sm-6">
                       <label class="col-form-label">Mission Description</label>
