--- a/Angular_VCProject/src/app/admin-side/mission/update-mission/update-mission.component.html
+++ b/Angular_VCProject/src/app/admin-side/mission/update-mission/update-mission.component.html
@@ -103,7 +103,7 @@
                     <div class="row">
                       <div class="col-sm-1 pt-2" *ngFor="let items of imageListArray">
                         <img src="{{items}}" style="width:95px;max-width: 95px important;height:95px;max-height: 95px !important;" onerror="this.src='assets/NoImg.png'" alt="" class="img-thumbnail position-relative">
-                        <!-- <span style="position:relative;"><button class="btn btnremove btn-outline-secondary" (click)="OnRemoveImage(items)">x</button></span> -->
+                        <span style="position:relative;"><button class="btn btnremove btn-outline-secondary" (click)="OnRemoveImage(items)">x</button></span>
                       </div>
                     </div>
                 </div>
@@ -113,6 +113,7 @@
         <div class="row justify-content-end mt-4">
           <button class="btnCancel" (click)="OnCancel()" ><span class="cancel">Cancel</span></button>
           <button class="btnSave" (click)="OnSubmit()"><span class="save">Save</span></button>
+          <button class="btnremove" (click)="OnRemoveImage(1)"><span class="edit">Edit</span></button>
         </div>
      </div>
    </div>
