--- a/GameStoreApp/src/app/pages/login/login.component.html
+++ b/GameStoreApp/src/app/pages/login/login.component.html
@@ -7,18 +7,34 @@
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
             @if (isLoginView) {
-                <form>
+                <form [formGroup]="loginForm">
                     <h3 class="fw-normal mb-3" style="letter-spacing: 1px;"> Login</h3> 
                     <div data-mdb-input-init class="form-outline mb-3">
-                      <input name="userName" [(ngModel)]="userLogin.userName" type="email" class="form-control form-control-lg"
+                      <input name="userName" id="userName_l" formControlName="userName_l" [(ngModel)]="userLogin.userName" type="email" class="form-control form-control-lg"
                         placeholder="Enter Username" />
-                      <label class="form-label" for="form3Example3">UserName</label>
+                      <!-- <label class="form-label" for="userName_l">UserName</label> -->
+                      <div class="text-danger">
+                        @if (loginForm.controls['userName_l'].touched && loginForm.controls['userName_l'].errors?.['required']) {
+                          <span>This is Required</span>
+                        } 
+                        @else if (loginForm.controls['userName_l'].errors?.['minlength']) {
+                          <span>Min 4 Char Required</span>
+                        }
+                      </div>
                     </div>
           
                     <div data-mdb-input-init class="form-outline mb-2">
-                      <input name="password" [(ngModel)]="userLogin.password" type="password" class="form-control form-control-lg"
+                      <input name="password" id="password_l" formControlName="password_l" [(ngModel)]="userLogin.password" type="password" class="form-control form-control-lg"
                         placeholder="Enter password" />
-                      <label class="form-label" for="form3Example4">Password</label>
+                      <!-- <label class="form-label" for="password_l">Password</label> -->
+                      <div class="text-danger">
+                        @if (loginForm.controls['password_l'].touched && loginForm.controls['password_l'].errors?.['required']) {
+                          <span>This is Required</span>
+                        } 
+                        @else if (loginForm.controls['password_l'].errors?.['minlength']) {
+                          <span>Min 6 Char Required</span>
+                        }
+                      </div>
                     </div>
           
                     <div class="text-center text-lg-start mt-2 pt-2">
@@ -30,34 +46,57 @@
           
                   </form>
             } @else {
-                <form>
-                    <h3 class="fw-normal mb-3" style="letter-spacing: 1px;"> Register</h3>
-                    <div data-mdb-input-init class="form-outline mb-2">
-                        <input name="userName" [(ngModel)]="userRegisterObj.userName" type="email" class="form-control form-control-lg"
-                          placeholder="Enter a Username" />
-                        <label class="form-label" for="form3Example3">Username</label>
-                      </div>
-
-                    <div data-mdb-input-init class="form-outline mb-2">
-                      <input name="emailId" [(ngModel)]="userRegisterObj.emailId" type="email" class="form-control form-control-lg"
-                        placeholder="Enter a valid email address" />
-                      <label class="form-label" for="form3Example3">Email address</label>
-                    </div>
-          
-                    <div data-mdb-input-init class="form-outline mb-2">
-                      <input name="password" [(ngModel)]="userRegisterObj.password" type="password" class="form-control form-control-lg"
-                        placeholder="Enter password" />
-                      <label class="form-label" for="form3Example4">Password</label>
-                    </div>
-          
-                    <div class="text-center text-lg-start mt-2 pt-2">
-                      <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg"
-                        style="padding-left: 2.5rem; padding-right: 2.5rem;" (click)="onRegister()">Register</button>
-                      <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account ? <button style="margin-left: 0.5rem;" 
-                        type="button" class="btn btn-danger" (click)="toggleLoginRegister()">Login</button></p> 
-                    </div>
-          
-                  </form>
+              <form [formGroup]="registerForm"> 
+                <h3 class="fw-normal mb-3" style="letter-spacing: 1px;"> Register</h3>
+            
+                <div data-mdb-input-init class="form-outline mb-2">
+                    <input name="userName" id="userName_r" formControlName="userName_r" [(ngModel)]="userRegisterObj.userName" type="email" class="form-control form-control-lg"
+                      placeholder="Enter a Username" />
+                    <!-- <label class="form-label" for="userName_r">Username</label> -->
+                    <div class="text-danger">
+                      @if (registerForm.controls['userName_r'].touched && registerForm.controls['userName_r'].errors?.['required']) {
+                          <span>This is Required</span>
+                      } 
+                      @else if (registerForm.controls['userName_r'].errors?.['minlength']) {
+                          <span>Min 4 Char Required</span>
+                      }
+                  </div>
+                </div>
+            
+                <div data-mdb-input-init class="form-outline mb-2">
+                    <input name="emailId" id="emailId_r" formControlName="emailId_r" [(ngModel)]="userRegisterObj.emailId" type="email" class="form-control form-control-lg"
+                      placeholder="Enter a valid email address" />
+                    <!-- <label class="form-label" for="emailId_r">Email address</label> -->
+                    <div class="text-danger">
+                      @if (registerForm.controls['emailId_r'].errors?.['email']) {
+                          <span>Enter a Valid Email Id</span>
+                      }
+                  </div>
+                </div>
+            
+                <div data-mdb-input-init class="form-outline mb-2">
+                    <input name="password" id="password_r" formControlName="password_r" [(ngModel)]="userRegisterObj.password" type="password" class="form-control form-control-lg"
+                      placeholder="Enter password" />
+                    <!-- <label class="form-label" for="password_r">Password</label> -->
+                    <div class="text-danger">
+                      @if (registerForm.controls['password_r'].touched && registerForm.controls['password_r'].errors?.['required']) {
+                          <span>This is Required</span>
+                      } 
+                      @else if (registerForm.controls['password_r'].errors?.['minlength']) {
+                          <span>Min 6 Char Required</span>
+                      }
+                  </div>
+                </div>
+            
+                <div class="text-center text-lg-start mt-2 pt-2">
+                    <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg"
+                      style="padding-left: 2.5rem; padding-right: 2.5rem;" (click)="onRegister()">Register</button>
+                    <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account ? 
+                        <button style="margin-left: 0.5rem;" type="button" class="btn btn-danger" (click)="toggleLoginRegister()">Login</button>
+                    </p> 
+                </div>
+            </form>
+            
             }
           
         </div>
